--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,19 @@
 @()
 @main("Welcome to Play") {
     <article>
-    <nav></nav>
+        <nav>
+            <label>
+                <input id="bible-search" type="text" class="form-control"/>
+            </label>
+        </nav>
+        <section class="search-result section-hidden">
+
+        </section>
         <section class="contents">
             <h1>Let's read bible!</h1>
+            <div id="contents">
+
+            </div>
         </section>
     </article>
 }
