--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,35 +17,5 @@ section {
     float: left;
     overflow-y: scroll;
     height: 100%;
-}
-
-.chap-block {
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.chap-header {
-    margin-right: .20em;
-    float: left;
-}
-
-.verse-header {
-    font-size: .1em;
-}
-
-span.verse-sentence {
-    font-family: "Times New Roman", serif;
-    font-size: 1.2em;
-}
-
-.link-bold {
-    font-weight: bold;
-}
-
-.block-clicked {
-    background-color: #ccd1d5;
-}
-
-.verse-block:hover {
-    background-color: #b6b9c1;
+    width: 800px;
 }
