--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,8 +13,10 @@
         <title>@title</title>
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.css")" />
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")" />
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main-section.css")" />
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")" />
         <script src="@routes.Assets.versioned("javascripts/jquery-3.5.1.slim.min.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/jquery-debounce.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/popper.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
