--- a/app/views/contents.scala.html
+++ b/app/views/contents.scala.html
@@ -13,7 +13,7 @@
     </head>
     <style>
             section.contents {
-                width: 1024px;
+                width: 800px;
             }
     </style>
     <body>
@@ -22,9 +22,9 @@
             <div id="contents">
             @for(book <- bibles("NRSV").books) {
                 <div class="book" data-book-id="@book.id">
-                    <h2>@book.name</h2>
+                    <h2 id="chapter-@book.id-0">@book.name</h2>
                     @for(chapter <- book.chapters) {
-                        <div class="chap-block" data-chapter-id="@chapter.id">
+                        <div id="chapter-@book.id-@chapter.id" class="chap-block" data-chapter-id="@chapter.id">
                             <h3 class="chap-header">@chapter.id</h3>
                             <div class="verses-block">
                             @for(verse <- chapter.verses) {
