--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,10 @@
         <script src="@routes.Assets.versioned("javascripts/jquery-debounce.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/popper.min.js")"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")"></script>
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/hello.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/lazy-loader.js")"></script>
+
+        @*        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>*@
     </head>
     <body>
         @* And here's where we render the `Html` object containing
