implement block clicking - and save to localStorage

--- a/app/views/contents.scala.html
+++ b/app/views/contents.scala.html
@@ -29,7 +29,7 @@
                             <div class="verses-block">
                             @for(verse <- chapter.verses) {
                                 <div class="verse-block" data-verse-id="@verse.id">
-                                    <span class="verse-header">@verse.verse</span>
+                                    <span class="verse-header">@verse.verse&nbsp;</span>
                                     <span class="verse-sentence">@verse.text</span>
                                 </div>
                             }
