--- a/public/stylesheets/main-section.css
+++ b/public/stylesheets/main-section.css
@@ -26,7 +26,7 @@ span.verse-sentence {
 }
 
 .verse-block:hover {
-    background-color: #b6b9c1;
+    background-color: #f1f1d1;
 }
 
 .section-hidden {
