add progress bar feature for first loading of rendering information

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,6 +11,9 @@
         </section>
         <section class="contents">
             <h1>Let's read bible!</h1>
+            <div id="spinner-ring" class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
             <div id="contents">
 
             </div>
